--- a/qunit.html
+++ b/qunit.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.6.1.css">
     <script src="https://code.jquery.com/qunit/qunit-2.6.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
+    <script src="app/app.js"></script>
     <script src="test/test.js"></script>
 </head>
 <body>
